macros/tests/ui/field_on_non_unit_enum.stderr
error: Unsupported shape `one unnamed field`. Expected no fields.
 --> tests/ui/field_on_non_unit_enum.rs:3:10
  |
3 | #[derive(TryFromField)]
  |          ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `TryFromField` (in Nightly builds, run with -Z macro-backtrace for more info)
