macros/tests/ui/field_on_non_unit_enum.rs
use axum_typed_multipart::TryFromField;

#[derive(TryFromField)]
enum Data {
    Variant(String),
}

fn main() {}
